update patch task by completed
